--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -253,3 +253,88 @@ table.table {
     padding: 1.2rem;  
   }
 }
+.modal {
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  margin: 0px;
+  .modal-dialog {
+    border-radius: 0px;
+    max-width: 100% !important;
+    position: absolute;
+    right: 0px;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    margin: 0px;
+    .modal-content {
+      position: absolute;
+      border-radius: 0px;
+      right: 0px;
+      left: 0px;
+      top: 0px;
+      bottom: 0px;
+      margin: 0px;
+      .modal-body {
+        margin-top: 100px;
+        max-width: 800px;
+        min-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+  .modal-body, .modal-header, .modal-footer, .modal-content {
+    border: none !important;
+    border-radius: 0px !important;
+  }
+}
+.modal-backdrop {
+  background-color: white !important;
+  opacity: 1;
+}
+.modal-backdrop.show {
+  background: white;
+  opacity: 1;
+}
+
+
+.site-connect-modal {
+  .modal-body .close {
+    padding: 1rem 1rem;
+    font-size: 50px;
+    position: absolute;
+    right: 0px;
+    top: -5px;
+  }
+  .site-favicon-holder {
+    height: 20px;
+    width: 20px;
+    border-radius: 300px;
+    border: 1px solid #efefef;
+    padding: 8px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .form-control {
+    padding: 2.5rem 1.25rem;
+    border-radius: 7px;
+  }
+
+  .btn {
+    padding: 1rem 1.5rem;
+    width: 100%;
+  }
+}
+
+button, a {
+  &:focus {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+}
